  - -X is no longer a synonym for --lower_case
  - Added --lookup_domain option which allows different default
    servers to be specified for different domains.
    Ronny Cook <ronny@ronnycook.org>
  - Addded POP3S and IMAP4S protocol labels
  - Updated signal handlers to reflect changes in libvanessa_socket
  - Change UID and GID before forking rather than after



----------------------------------------------------------------------

14th March 2002
(Horms)

  * Version 0.1.10beta1
  - Fixed problem with setting ssl_key_file.
  - Brief documentation for how to generate .pem files for SSL/TLS
  - Handle systems that don't have socklen_t
  - Duplicate strings before calling vanessa_dynamic_array_split_str()
    to avoid strings being truncated in debuging output.
  - Fixed error in perditiondb_mysql_makedb whereby privelages were
    always granted to dbPerdition regarless of the requested
    name of the database.
  - Free internally allocated memory if something goes wrong in token_read()
  - Setting ssl-mode to none now actually works
  - Link ldap code against libresolv if it is present on the system. Eric Fagan
  - Fix doble frees relating to username_mangle.
  - PostgreSQL module now has the same alternate column name support
    as the MySQL module. Matt Prigge
  - Fixed minor .spec file and documentaion errors
    Scot W. Hetzel <scot@genroco.com>
  - Added support for Username and Password in LDAP URL
    Chris Stratford <Chris.Stratford@uk.uu.net>
  - Code to detatch from terminal moved into libvanessa_socket
  - makegdbm now compiles with --disable-static. Vyt <vyt@vzljot.ru>
  - compatibility for systems without parse_printf_format()
    Ronny Cook <ronny@ronnycook.org>
  - Separate .spec files for Redhat and LSB (SuSE)
  - -I/--imap_capability option so that the IMAP capabilities
    can be specified more easily. Added to help resolve a problem
    when using Perdition with Solaris 8 + Netscape 4 + Cyrus IMAPD