@@ -35,7 +35,7 @@ AC_PROG_LN_S
 AC_PROG_MAKE_SET
 
 
-dnl Checks for libraries.
+# Checks for libraries.
 AC_CHECK_LIB(dl, dlopen,  [ dl_lib="-ldl" ], [ dl_lib="" ])
 AC_CHECK_LIB(gdbm, gdbm_open, true, true)
 AC_CHECK_LIB(nsl, yp_match, true, true)
@@ -98,7 +98,7 @@ AC_MSG_ERROR(
 )
 
 
-dnl Checks for header files.
+# Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 
@@ -668,12 +668,95 @@ else
 fi
 
 
-dnl Checks for typedefs, structures, and compiler characteristics.
+######################################################################
+# Check for various argv[] replacing functions on various OSs
+#
+# Borrowed from Proftpd
+# Proftpd is Licenced under the terms of the GNU General Public Licence
+# and is available from http://www.proftpd.org/
+
+AC_CHECK_FUNCS(setproctitle)
+AC_CHECK_HEADERS(libutil.h)
+AC_CHECK_LIB(util, setproctitle,
+	[AC_DEFINE(HAVE_SETPROCTITLE)
+		ac_cv_func_setproctitle="yes" ; LIBS="$LIBS -lutil"])
+
+if test "$ac_cv_func_setproctitle" = "yes"; then
+  AC_DEFINE(PF_ARGV_TYPE, PF_ARGV_NONE)
+else
+  pf_argv_set="no"
+
+  AC_CHECK_HEADERS(sys/pstat.h,have_pstat_h="yes",have_pstat_h="no")
+  if test "$have_pstat_h" = "yes"; then
+    AC_CHECK_FUNCS(pstat)
+    
+    if test "$ac_cv_func_pstat" = "yes"; then
+	AC_DEFINE(PF_ARGV_TYPE, PF_ARGV_PSTAT)
+    else
+	AC_DEFINE(PF_ARGV_TYPE, PF_ARGV_WRITABLE)
+    fi
+
+    pf_argv_set="yes"
+  fi
+
+  if test "$pf_argv_set" = "no"; then
+    AC_EGREP_HEADER([#define.*PS_STRINGS.*],sys/exec.h,
+			have_psstrings="yes",have_psstrings="no")
+    if test "$have_psstrings" = "yes"; then
+	AC_DEFINE(PF_ARGV_TYPE, PF_ARGV_PSSTRINGS)
+	pf_argv_set="yes"
+    fi
+  fi
+
+  if test "$pf_argv_set" = "no"; then
+    AC_CACHE_CHECK(whether __progname and __progname_full are available,
+		    pf_cv_var_progname,
+		    AC_TRY_LINK([extern char *__progname, *__progname_full;],
+			[__progname = "foo"; __progname_full = "foo bar";],
+			pf_cv_var_progname="yes", pf_cv_var_progname="no"))
+
+    if test "$pf_cv_var_progname" = "yes"; then
+	AC_DEFINE(HAVE___PROGNAME)
+    fi
+
+    AC_CACHE_CHECK(which argv replacement method to use,
+		    pf_cv_argv_type,
+		    AC_EGREP_CPP(yes,[
+#if defined(__GNU_HURD__)
+  yes
+#endif
+  ],pf_cv_argv_type="new", pf_cv_argv_type="writeable"))
+
+    if test "$pf_cv_argv_type" = "new"; then
+	AC_DEFINE(PF_ARGV_TYPE, PF_ARGV_NEW)
+	pf_argv_set="yes"
+    fi
+
+    if test "$pf_argv_set" = "no"; then
+	AC_DEFINE(PF_ARGV_TYPE, PF_ARGV_WRITEABLE)
+    fi
+  fi
+fi
+
+  
+# End of tests borrowed from Proftpd
+
+######################################################################
+#      Check the size of the integer types
+#      So we can have integers of known sizes as needed
+
+AC_CHECK_SIZEOF(char)
+AC_CHECK_SIZEOF(short)
+AC_CHECK_SIZEOF(int)
+AC_CHECK_SIZEOF(long)
+
+
+# Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_UID_T
 AC_TYPE_SIZE_T
 
-dnl Checks for library functions.
+# Checks for library functions.
 AC_TYPE_SIGNAL
 AC_FUNC_WAIT3
 AC_CHECK_FUNCS(select socket strdup strerror parse_printf_format flim)
