@@ -17,6 +17,8 @@ xxx
   - Addded POP3S and IMAP4S protocol labels
   - Updated signal handlers to reflect changes in libvanessa_socket
   - Change UID and GID before forking rather than after
+  - Change process title at different stages of a perdition processes 
+    life
 
 
 
